--- a/config/appsignal.yml
+++ b/config/appsignal.yml
@@ -2,4 +2,17 @@ production:
   ignore_errors:
     - ActiveRecord::RecordNotFound
     - ActionController::RoutingError
+    - ActiveRecord::QueryCanceled
+    - Rack::Timeout::RequestTimeoutException
+    - Octokit::ServerError
+    - Faraday::ConnectionFailed
+    - Faraday::TimeoutError
+    - Addressable::URI::InvalidURIError
+    - Faraday::SSLError
+    - ActiveRecord::RecordNotUnique
+    - PackageURL::InvalidPackageURL
+    - Rack::Timeout::RequestExpiryError
+    - Oj::ParseError
+    - Pagy::VariableError
     - Pagy::OverflowError
+    - ActiveRecord::StatementInvalid
