--- a/app.json
+++ b/app.json
@@ -10,7 +10,7 @@
     },
     {
       "command": "bundle exec rake hosts:update_counts",
-      "schedule": "*/15 * * * *"
+      "schedule": "0 0 * * *"
     },
     {
       "command": "bundle exec rake repositories:sync_least_recent",
