--- a/app.json
+++ b/app.json
@@ -1,6 +1,10 @@
 {
   "cron": [
     {
+      "command": "bundle exec rake gharchive:import_24_hours",
+      "schedule": "0 * * * *"
+    },
+    {
       "command": "bundle exec rake jobs:check_statuses",
       "schedule": "*/10 * * * *"
     },
