--- a/config/appsignal.yml
+++ b/config/appsignal.yml
@@ -16,3 +16,4 @@ production:
     - Pagy::VariableError
     - Pagy::OverflowError
     - ActiveRecord::StatementInvalid
+    - ActionDispatch::RemoteIp::IpSpoofAttackError
